<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">fNordeingang</string>
    
    <string name="fNordStatusUnknown">\nfNordStatus is: \n unknown</string>
    <string name="fNordStatusOpen">\nfNordStatus is: \n open</string>
    <string name="fNordStatusClosed">\nfNordStatus is: \n closed</string>
    <string name="refresh">refresh</string>
    <string name="fNordStatusInfo">Please enter username and password.</string>
    <string name="fNordStatusUserfield">Username</string>
    <string name="fNordStatusPassfield">Password</string>
    <string name="fNordStatusSendbutton">Send</string>
    <color name="fNordGreen">#097c42</color>
    <string name="fNordTweetText">Tweet</string>
    <string name="fNordDoorText">Open\nDoor</string>
    <string name="fNordToggleText">Toggle\nStatus</string>
    <string name="fNordAboutText">About\nfNordApp</string>
    <string name="fNordSettingsText">Settings</string>
    <string name="fNordCalendarText">fNord\nCalendar</string>
    <string name="fNordPowerCtrlText">fNord\nPowerCtrl</string>
    <string name="fNordCashText">fNordCash</string>
    <string name="fNordSettingsUserInfo">Please enter username and password.</string>
    <string name="fNordSettingsUserfield">Username</string>
    <string name="fNordSettingsPassfield">Password</string>
    <string name="fNordSettingsSaveButton">Save</string>
    <string name="fNordCashBalanceText">Current balance:</string>
    <string name="fNordCashBalanceValue"> n/a</string>
    <string name="fNordCashTabText1">Account</string>
    <string name="fNordCashTabText2">Shopping</string>
    <string name="fNordCashTabText3">Foo</string>
</resources>
